feat(app:components:note-card): make note-cards clickable links

--- a/src/app/components/note-card/note-card.component.html
+++ b/src/app/components/note-card/note-card.component.html
@@ -1,4 +1,4 @@
-<div class="note-card">
+<a class="note-card" routerLink="/notes/{{noteCard?.id}}">
   <h2>{{noteCard?.title}}</h2>
   <div>{{noteCard?.text}}</div>
-</div>
+</a>
