--- a/src/app/notes/note-edit/note-edit.component.html
+++ b/src/app/notes/note-edit/note-edit.component.html
@@ -1,25 +1,28 @@
 <div class="note-block">
   <h1>NOTE EDIT</h1>
-  <button routerLink="/" mat-button>Back</button>
   <div class="note">
-    <form [formGroup]="noteEditorFormGroup" class="note-form" (ngSubmit)="submitForm()">
+    <form (ngSubmit)="submitForm()" [formGroup]="noteEditorFormGroup" class="note-form">
       <mat-form-field>
-        <mat-label for="topicId">Topic</mat-label>
-        <mat-select id="topicId" formControlName="topicId">
+        <mat-label>Topic</mat-label>
+        <mat-select formControlName="topicId" id="topicId">
           <mat-option *ngFor="let topic of topics$ | async" [value]="topic.id">{{topic.type}}</mat-option>
         </mat-select>
       </mat-form-field>
       <mat-form-field>
-        <mat-label for="title">Title</mat-label>
-        <input type="text" id="title" matInput formControlName="title">
+        <mat-label>Title</mat-label>
+        <input formControlName="title" id="title" matInput type="text">
       </mat-form-field>
       <mat-form-field>
-        <mat-label for="text">Text</mat-label>
-        <textarea type="text" id="text" matInput formControlName="text"></textarea>
+        <mat-label>Text</mat-label>
+        <textarea formControlName="text" id="text" matInput type="text"></textarea>
       </mat-form-field>
-      <ng-template [ngIf]="isEditMode$ | async" [ngIfElse]="createNote">
-        <button mat-button type="submit">Update Note</button>
-      </ng-template>
+      <div class="note-form__actions">
+        <button mat-button routerLink="/">Cancel</button>
+        <ng-template [ngIfElse]="createNote" [ngIf]="isEditMode$ | async">
+          <button mat-button type="submit">Update Note</button>
+          <button (click)="deleteNote()" mat-button>Delete Note</button>
+        </ng-template>
+      </div>
     </form>
 
     {{currentNote$ | async | json}}
