--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,9 @@
 <div class="header-main">
   <a routerLink="/" class="header__logo">NOTESY</a>
-  <button mat-button (click)="logOut()" class="header__button">Log Out</button>
+  <button mat-button [matMenuTriggerFor]="menu" class="header__button">
+    <mat-icon>person</mat-icon>
+  </button>
 </div>
+<mat-menu #menu="matMenu">
+  <button mat-button (click)="logOut()"><mat-icon>clear</mat-icon> Log Out</button>
+</mat-menu>
