--- a/src/app/notes/note-edit/note-edit.component.html
+++ b/src/app/notes/note-edit/note-edit.component.html
@@ -1,5 +1,4 @@
 <div class="note-block">
-  <h1>NOTE EDIT</h1>
   <div class="note">
     <form (ngSubmit)="submitForm()" [formGroup]="noteEditorFormGroup" class="note-form">
       <mat-form-field>
@@ -17,9 +16,9 @@
         <textarea formControlName="text" id="text" matInput type="text"></textarea>
       </mat-form-field>
       <div class="note-form__actions">
-        <button mat-button routerLink="/">Cancel</button>
+        <button *ngIf="!dialogId" mat-button routerLink="/notes">Go Back</button>
         <ng-template [ngIfElse]="createNote" [ngIf]="isEditMode$ | async">
-          <button mat-button type="submit">Update Note</button>
+          <button mat-button type="submit" [disabled]="isFormInvalid">Update Note</button>
           <button (click)="deleteNote()" mat-button>Delete Note</button>
         </ng-template>
       </div>
@@ -31,5 +30,5 @@
 </div>
 
 <ng-template #createNote>
-  <button mat-button type="submit">Save Note</button>
+  <button mat-button type="submit" [disabled]="isFormInvalid">Save Note</button>
 </ng-template>
