--- a/src/app/notes/note-edit-dialog/note-edit-dialog.component.html
+++ b/src/app/notes/note-edit-dialog/note-edit-dialog.component.html
@@ -1,8 +1,7 @@
 <h1 mat-dialog-title>NOTE EDIT</h1>
 <div mat-dialog-content>
-  <app-note-edit
-    [dialogId]=data.id
-  ></app-note-edit>
+  <app-note-form
+  ></app-note-form>
 </div>
 <mat-dialog-actions align="center">
   <button mat-button mat-dialog-close>Cancel</button>
