--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -13,11 +13,6 @@
   </div>
 
   <table *ngIf="notesList$ | async as notesList" [dataSource]="notesList" class="notes-table" mat-table>
-    <ng-container matColumnDef="number">
-      <th *matHeaderCellDef mat-header-cell>ID</th>
-      <td *matCellDef="let note" mat-cell>{{note.id}}</td>
-    </ng-container>
-
     <ng-container matColumnDef="topic">
       <th *matHeaderCellDef mat-header-cell>Topic</th>
       <td *matCellDef="let note" mat-cell>{{note.topicType}}</td>
@@ -26,6 +21,11 @@
     <ng-container matColumnDef="title">
       <th *matHeaderCellDef mat-header-cell>Title</th>
       <td *matCellDef="let note" mat-cell>{{note.title}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="author">
+      <th *matHeaderCellDef mat-header-cell>Author</th>
+      <td *matCellDef="let note" mat-cell>{{note.userName}}</td>
     </ng-container>
 
     <ng-container matColumnDef="marker">
