--- a/src/app/notes/note-edit-dialog/note-edit-dialog.component.html
+++ b/src/app/notes/note-edit-dialog/note-edit-dialog.component.html
@@ -1,6 +1,8 @@
 <h1 mat-dialog-title>NOTE EDIT</h1>
 <div mat-dialog-content>
-  <app-note-form></app-note-form>
+  <app-note-form
+    [noteId]="noteId"
+  ></app-note-form>
 </div>
 <mat-dialog-actions align="center">
   <button mat-button mat-dialog-close="">Close</button>
