--- a/src/app/notes/note-edit-dialog/note-edit-dialog.component.html
+++ b/src/app/notes/note-edit-dialog/note-edit-dialog.component.html
@@ -1,9 +1,34 @@
 <h1 mat-dialog-title>NOTE EDIT</h1>
 <div mat-dialog-content>
-  <app-note-form
-    [noteId]="noteId"
-  ></app-note-form>
+  <div class="note">
+    <form (ngSubmit)="submitForm()" [formGroup]="noteEditorFormGroup" class="note-form">
+      <mat-form-field>
+        <mat-label>Topic</mat-label>
+        <mat-select formControlName="topicId" id="topicId">
+          <mat-option *ngFor="let topic of topics$ | async" [value]="topic.id">{{topic.type}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Title</mat-label>
+        <input formControlName="title" id="title" matInput type="text">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Text</mat-label>
+        <textarea formControlName="text" id="text" matInput type="text"></textarea>
+      </mat-form-field>
+      <div class="note-form__actions">
+        <ng-template [ngIfElse]="createNote" [ngIf]="isEditMode$ | async">
+          <button [disabled]="!noteEditorFormGroup.valid" mat-button type="submit">Update Note</button>
+          <button (click)="deleteNote()" mat-button>Delete Note</button>
+        </ng-template>
+      </div>
+    </form>
+  </div>
 </div>
 <mat-dialog-actions align="center">
   <button mat-button mat-dialog-close="">Close</button>
 </mat-dialog-actions>
+
+<ng-template #createNote>
+  <button [disabled]="!noteEditorFormGroup.valid" mat-button type="submit">Save Note</button>
+</ng-template>
