--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,13 +2,13 @@
   <a class="header__logo" routerLink="/">NOTESY</a>
   <div>
     <button [matMenuTriggerFor]="menu" class="header__button" mat-button>
-      <div *ngIf="currentUser.token">Hi, {{currentUser.name}}</div>
+      <div *ngIf="currentUser?.token">Hi, {{currentUser.name}}</div>
       <mat-icon>person</mat-icon>
     </button>
   </div>
 </div>
 <mat-menu #menu="matMenu">
-  <ng-template [ngIfElse]="login" [ngIf]="currentUser.token">
+  <ng-template [ngIfElse]="login" [ngIf]="currentUser?.token">
     <button (click)="logOut()" mat-button>
       <mat-icon>logout</mat-icon>
       Log Out
