--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,31 +1,37 @@
 <div class="notes-main base-wrapper">
   <h1>NOTESY main page</h1>
 
-  <button (click)="showSelected()" mat-button>show selected</button>
+  <div class="notes-filters">
+    <mat-form-field>
+      <mat-label>User:</mat-label>
+      <mat-select [formControl]="userIdFormControl">
+        <mat-option [value]="null" ngDefaultControl>
+          ALL
+        </mat-option>
+        <mat-option *ngFor="let user of users$ | async" [value]="user.id">
+          {{user.name}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
 
-  <div>
-    <mat-select [formControl]="userIdFormControl" placeholder="ALL">
-      <mat-option [value]="null" ngDefaultControl>
-        ALL
-      </mat-option>
-      <mat-option *ngFor="let user of users$ | async" [value]="user.id">
-        {{user.name}}
-      </mat-option>
-    </mat-select>
-
-    <mat-select [formControl]="topicIdFormControl" placeholder="ALL">
-      <mat-option [value]="null" ngDefaultControl>
-        ALL
-      </mat-option>
-      <mat-option *ngFor="let topic of topics$ | async" [value]="topic.id">
-        {{topic.type}}
-      </mat-option>
-    </mat-select>
+    <mat-form-field>
+      <mat-label>Topic:</mat-label>
+      <mat-select [formControl]="topicIdFormControl">
+        <mat-option [value]="null" ngDefaultControl>
+          ALL
+        </mat-option>
+        <mat-option *ngFor="let topic of topics$ | async" [value]="topic.id">
+          {{topic.type}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
   </div>
 
   <table *ngIf="notesList$ | async as notesList" [dataSource]="notesList" class="notes-table" mat-table>
     <ng-container matColumnDef="createNewNote">
-      <th *matHeaderCellDef mat-header-cell [attr.colspan]="tableColumnsList.length">Create New Note</th>
+      <th *matHeaderCellDef [attr.colspan]="tableColumnsList.length" class="notes-table__new-note" mat-header-cell>
+        Create New Note
+      </th>
     </ng-container>
 
     <ng-container matColumnDef="topic">
