--- a/src/app/notes/note-edit-dialog/note-edit-dialog.component.scss
+++ b/src/app/notes/note-edit-dialog/note-edit-dialog.component.scss
@@ -47,6 +47,12 @@
           flex: 1 1 40%;
         }
       }
+
+      &--text {
+        textarea {
+          resize: none;
+        }
+      }
     }
   }
 
