--- a/src/app/notes/note-edit-dialog/note-edit-dialog.component.html
+++ b/src/app/notes/note-edit-dialog/note-edit-dialog.component.html
@@ -1,12 +1,14 @@
 <div class="note-dialog">
-  <ng-template [ngIfElse]="newNoteTitle" [ngIf]="isEditMode$ | async">
-    <h1 class="note-dialog__title" mat-dialog-title>NOTE EDIT</h1>
-  </ng-template>
-  <mat-dialog-actions>
-    <button aria-label="close" class="note-dialog__close-button" mat-dialog-close="" mat-mini-fab matTooltip="Close">
-      <mat-icon>close</mat-icon>
-    </button>
-  </mat-dialog-actions>
+  <div class="note-dialog__top">
+    <ng-template [ngIfElse]="newNoteTitle" [ngIf]="isEditMode$ | async">
+      <h1 class="note-dialog__title" mat-dialog-title>EDIT NOTE</h1>
+    </ng-template>
+    <mat-dialog-actions>
+      <button aria-label="close" class="note-dialog__close-button" mat-dialog-close="" mat-mini-fab matTooltip="Close">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-dialog-actions>
+  </div>
   <div mat-dialog-content>
     <div class="note-dialog__content">
       <form #formElement="ngForm" [formGroup]="noteEditorFormGroup" class="note-dialog__form">
@@ -15,38 +17,21 @@
           <mat-select [formControl]="topicIdFormControl">
             <mat-option *ngFor="let topic of topics$ | async" [value]="topic.id">{{topic.type}}</mat-option>
           </mat-select>
-          <app-form-errors
-            [control]="topicIdFormControl"
-            [errors]="{required: 'Topic is required'}"
-            [submitted]="formElement.submitted"
-          ></app-form-errors>
+          <mat-error *ngIf="topicIdFormControl.hasError('required')">Topic is required</mat-error>
         </mat-form-field>
         <mat-form-field class="form__input form__input--title">
           <mat-label>Title</mat-label>
           <input [formControl]="titleFormControl" matInput type="text">
-          <app-form-errors
-            [control]="titleFormControl"
-            [errors]="{
-              required: 'Title is required',
-              minlength: 'Title must be at least 3 characters',
-              maxlength: 'Title must be less than 50 characters'
-            }"
-            [submitted]="formElement.submitted"
-          ></app-form-errors>
+          <mat-error *ngIf="titleFormControl.hasError('required')">Title is required</mat-error>
+          <mat-error *ngIf="titleFormControl.hasError('minlength')">Title is too short</mat-error>
+          <mat-error *ngIf="titleFormControl.hasError('maxlength')">Title is too long</mat-error>
         </mat-form-field>
         <mat-form-field class="form__input form__input--text">
           <mat-label>Text</mat-label>
-          <textarea [formControl]="textFormControl" matInput maxlength="251" rows="11" type="text"></textarea>
-          <app-form-errors
-            [control]="textFormControl"
-            [errors]="{
-              required: 'Text is required',
-              minlength: 'Text must be at least 3 characters',
-              maxlength: 'Text must be less than 250 characters'
-            }"
-            [submitted]="formElement.submitted"
-          ></app-form-errors>
-        </mat-form-field>
+          <textarea [formControl]="textFormControl" matInput maxlength="251" rows="8" type="text"></textarea>
+          <mat-error *ngIf="textFormControl.hasError('required')">Text is required</mat-error>
+          <mat-error *ngIf="textFormControl.hasError('minlength')">Text is too short</mat-error>
+          <mat-error *ngIf="textFormControl.hasError('maxlength')">Text is too long</mat-error>        </mat-form-field>
         <div class="note-dialog__actions">
           <ng-template [ngIfElse]="createNote" [ngIf]="isEditMode$ | async">
             <button (click)="submitForm()" [disabled]="isEqual$ | async"
