feat(app:notes:note-edit-dialog): remove unused code

--- a/src/app/notes/note-edit-dialog/note-edit-dialog.component.html
+++ b/src/app/notes/note-edit-dialog/note-edit-dialog.component.html
@@ -21,7 +21,7 @@
         </mat-form-field>
         <mat-form-field class="form__input form__input--title">
           <mat-label>Title</mat-label>
-          <div class="form__character-counter" [ngStyle]="titleErrorColor">{{titleLength}} / {{titleMaxLength}}</div>
+          <div class="form__character-counter">{{titleFormControl.value.length}} / {{titleMaxLength}}</div>
           <input [formControl]="titleFormControl" matInput type="text">
           <mat-error *ngIf="titleFormControl.hasError('required')">Title is required</mat-error>
           <mat-error *ngIf="titleFormControl.hasError('minlength')">Title is too short</mat-error>
@@ -29,7 +29,7 @@
         </mat-form-field>
         <mat-form-field class="form__input form__input--text">
           <mat-label>Text</mat-label>
-          <div class="form__character-counter" [ngStyle]="textErrorColor">{{textLength}} / {{textMaxLength}}</div>
+          <div class="form__character-counter">{{textFormControl.value.length}} / {{textMaxLength}}</div>
           <textarea [formControl]="textFormControl" matInput rows="8" type="text"></textarea>
           <mat-error *ngIf="textFormControl.hasError('required')">Text is required</mat-error>
           <mat-error *ngIf="textFormControl.hasError('minlength')">Text is too short</mat-error>
@@ -37,7 +37,7 @@
         </mat-form-field>
         <div class="note-dialog__actions">
           <ng-template [ngIfElse]="createNote" [ngIf]="isEditMode$ | async">
-            <button (click)="submitForm()" [disabled]="isEqual$ | async"
+            <button (click)="submitForm()" [disabled]="(isEqual$ | async) || !noteEditorFormGroup.valid"
                     class="note-dialog__button note-dialog__button--submit"
                     mat-button
                     matTooltip="Save Note"
