--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<main>
+  <app-spinner></app-spinner>
+  <router-outlet></router-outlet>
+</main>
