--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,39 +1,37 @@
 <div class="notes-main base-wrapper">
-  <h1>NOTESY main page</h1>
+  <h1 class="notes-main__header">NOTESY main page</h1>
 
-  <div class="notes-filters">
-    <mat-form-field>
-      <mat-label>User:</mat-label>
-      <mat-select [formControl]="userIdFormControl">
-        <mat-option [value]="null" ngDefaultControl>
-          ALL
-        </mat-option>
-        <mat-option *ngFor="let user of users$ | async" [value]="user.id">
-          {{user.name}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+  <div class="notes-actions">
+    <div class="notes-actions__filters">
+      <mat-form-field class="action__filter">
+        <mat-label>User:</mat-label>
+        <mat-select [formControl]="userIdFormControl">
+          <mat-option [value]="null" ngDefaultControl>
+            ALL
+          </mat-option>
+          <mat-option *ngFor="let user of users$ | async" [value]="user.id">
+            {{user.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>Topic:</mat-label>
-      <mat-select [formControl]="topicIdFormControl">
-        <mat-option [value]="null" ngDefaultControl>
-          ALL
-        </mat-option>
-        <mat-option *ngFor="let topic of topics$ | async" [value]="topic.id">
-          {{topic.type}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+      <mat-form-field class="action__filter">
+        <mat-label>Topic:</mat-label>
+        <mat-select [formControl]="topicIdFormControl">
+          <mat-option [value]="null" ngDefaultControl>
+            ALL
+          </mat-option>
+          <mat-option *ngFor="let topic of topics$ | async" [value]="topic.id">
+            {{topic.type}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    <button mat-button (click)="newNote()" class="notes-actions__button">Add Note</button>
   </div>
 
   <table *ngIf="notesList$ | async as notesList" [dataSource]="notesList" class="notes-table" mat-table>
-    <ng-container matColumnDef="createNewNote">
-      <th *matHeaderCellDef [attr.colspan]="tableColumnsList.length" class="notes-table__new-note" mat-header-cell>
-        Create New Note
-      </th>
-    </ng-container>
-
     <ng-container matColumnDef="topic">
       <th *matHeaderCellDef mat-header-cell>Topic</th>
       <td *matCellDef="let note" mat-cell>{{note.topicType}}</td>
@@ -66,11 +64,6 @@
     </ng-container>
 
     <tr *matHeaderRowDef="tableColumnsList" mat-header-row></tr>
-    <tr
-      (click)="newNote()"
-      *matHeaderRowDef="newNoteRow"
-      mat-header-row
-    ></tr>
     <tr
       (click)="openDialog(row)"
       *matRowDef="let row; columns: tableColumnsList;"
